objects/Observation__c.object
<CustomObject>
    <description>Used to raise issues during UAT/go-live</description>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HubSpot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EchoSign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BrightGen_Comments__c</fullName>
        <label>BrightGen Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Please_Specify__c</fullName>
        <label>Other Please Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further Information Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Steps_to_Recreate__c</fullName>
        <inlineHelpText>Please describe the steps taken to produce the error (if applicable)</inlineHelpText>
        <label>Steps to Recreate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Observation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Closed_Observations</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>BrightGen_Comments__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Observations</label>
    </listViews>
    <listViews>
        <fullName>Further_Info_Required</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>BrightGen_Comments__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Further Information Required</value>
        </filters>
        <label>Further Info Required</label>
    </listViews>
    <listViews>
        <fullName>In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>BrightGen_Comments__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress</label>
    </listViews>
    <listViews>
        <fullName>New_Observations</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>BrightGen_Comments__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Observations</label>
    </listViews>
    <listViews>
        <fullName>Obs_Updates</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>BrightGen_Comments__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Obs Updates</label>
    </listViews>
    <listViews>
        <fullName>Ready_For_Retest</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>BrightGen_Comments__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Retest</value>
        </filters>
        <label>Ready For Retest</label>
    </listViews>
    <listViews>
        <fullName>Rejected_Obeservations</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>BrightGen_Comments__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected Obeservations</label>
    </listViews>
    <nameField>
        <displayFormat>OBS{00000}</displayFormat>
        <label>Observation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Observations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Other_Please_Specify_Mandatory</fullName>
        <active>true</active>
        <description>Other Please Specify is mandatory when Area is set to Other</description>
        <errorConditionFormula>AND(
$Setup.Validation_Toggle__c.Is_Validation_On__c,
ISPICKVAL( Area__c , &quot;Other&quot;),
ISBLANK( Other_Please_Specify__c )
)</errorConditionFormula>
        <errorDisplayField>Other_Please_Specify__c</errorDisplayField>
        <errorMessage>Please specify the area of the system that the observation relates to</errorMessage>
    </validationRules>
</CustomObject>